PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2018, PHP 7.2.13

- ODBC:
  . Fixed bug #77079 (odbc_fetch_object has incorrect type signature).
    (Jon Allen)

- Opcache:
  . Fixed bug #77058 (Type inference in opcache causes side effects). (Nikita)

- SOAP:
  . Fixed bug #50675 (SoapClient can't handle object references correctly).
    (Cameron Porter)

08 Nov 2018, PHP 7.2.12

- Core:
  . Fixed bug #76846 (Segfault in shutdown function after memory limit error).
    (Nikita)
  . Fixed bug #76946 (Cyclic reference in generator not detected). (Nikita)
  . Fixed bug #77035 (The phpize and ./configure create redundant .deps file).
    (Peter Kokot)
  . Fixed bug #77041 (buildconf should output error messages to stderr)
    (Mizunashi Mana)

- Date:
  . Upgraded timelib to 2017.08. (Derick)
  . Fixed bug #75851 (Year component overflow with date formats "c", "o", "r"
    and "y"). (Adam Saponara)
  . Fixed bug #77007 (fractions in `diff()` are not correctly normalized).
    (Derick)

- FCGI:
  . Fixed #76948 (Failed shutdown/reboot or end session in Windows). (Anatol)
  . Fixed bug #76954 (apache_response_headers removes last character from header
    name). (stodorovic)

- FTP:
  . Fixed bug #76972 (Data truncation due to forceful ssl socket shutdown).
    (Manuel Mausz)

- intl:
  . Fixed bug #76942 (U_ARGUMENT_TYPE_MISMATCH). (anthrax at unixuser dot org)

- Reflection:
  . Fixed bug #76936 (Objects cannot access their private attributes while
    handling reflection errors). (Nikita)
  . Fixed bug #66430 (ReflectionFunction::invoke does not invoke closure with
    object scope). (Nikita)

- Sodium:
  . Some base64 outputs were truncated; this is not the case any more.
    (jedisct1)
  . block sizes >= 256 bytes are now supposed by sodium_pad() even
    when an old version of libsodium has been installed. (jedisct1)